# zupit-pidb

./: Dockerfile  README.md  compose.yaml  entrypoint.sh  init.sql  populate.sql  pyproject.toml
static/: script.js
templates/: car.html  create-driver.html  main.html  navbar.html  offer.html  search-travel.html  sign-in.html  sign-up.html
tests/: conftest.py  test_app.py  test_avalia.py  test_cars.py  test_drivers.py  test_travels.py  test_users.py
zupit/: app.py  database.py  manager.py  settings.py  utils.py
zupit/router/: cars.py  chats.py  drivers.py  messages.py  offer.py  profile.py  rate.py  travels.py  users.py
zupit/schemas/: cars.py  chats.py  drivers.py  rate.py  travels.py  users.py
zupit/service/: cars_crud.py  chats_crud.py  drivers_crud.py  rate_crud.py  travels_crud.py  users_crud.py
zupit/static/: script.js  style.css
zupit/templates/: car.html  chats.html  create-driver.html  messages.html  navbar.html  result-search-travel.html  search-travel.html  sign-in.html  sign-up.html  trip-participants.html
zupit/templates/offer/: fifth.html  first.html  fourth.html  second.html  sixth.html  third.html
zupit/templates/profile/: index.html  my-travels.html  view.html
zupit/templates/rate/: rate-driver.html  rate-passenger.html  view-ratings.html
